--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .App {
-  text-align: center;
+  text-align: left;
+  background-color:#5022c3 ;
+  min-height: 100vh;
+  color: white;
+ 
 }
 
 .App-logo {
@@ -14,7 +18,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #5022c3;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
